@@ -368,6 +368,8 @@ hasExtBitOp (int op, sym_link *left, int right)
           return false;
         if (lbits == 8)
           return true;
+        if (lbits > (unsigned)port->support.shift*8)
+          return false;
         if (right % lbits  == 1 || right % lbits == lbits - 1)
           return true;
         if (lbits <= 16 && lbits == right * 2)
